--- a/index.html
+++ b/index.html
@@ -4,8 +4,31 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Image Search App</title>
-</head>
+    <link rel="stylesheet" href="style.css">
 <body>
-    
+    <h1>Image Search App</h1>
+    <form>
+        <input 
+          type="text" 
+          id="search-input" 
+          placeholder="Search for images...">
+        <button type="submit" id="search-button">Search</button>
+    </form>
+    <div class="search-results">
+        <div class="search-result">
+            <img src="https://images.unsplash.com/photo-1743930285940-4ffe9e29007c?w=1000&auto=format&fit=crop&q=60&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxmZWF0dXJlZC1waG90b3MtZmVlZHwxOXx8fGVufDB8fHx8fA%3D%3D" alt="image">
+            <a href="https://unsplash.com/photos/a-cat-relaxes-inside-a-shop-with-film-TylCyNEUW1o" target="_blank">A cat relaxes inside a shop with film.</a>
+        </div>
+        <div class="search-result">
+            <img src="https://images.unsplash.com/photo-1743930285940-4ffe9e29007c?w=1000&auto=format&fit=crop&q=60&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxmZWF0dXJlZC1waG90b3MtZmVlZHwxOXx8fGVufDB8fHx8fA%3D%3D" alt="image">
+            <a href="https://unsplash.com/photos/a-cat-relaxes-inside-a-shop-with-film-TylCyNEUW1o" target="_blank">A cat relaxes inside a shop with film.</a>
+        </div>
+        <div class="search-result">
+            <img src="https://images.unsplash.com/photo-1743930285940-4ffe9e29007c?w=1000&auto=format&fit=crop&q=60&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxmZWF0dXJlZC1waG90b3MtZmVlZHwxOXx8fGVufDB8fHx8fA%3D%3D" alt="image">
+            <a href="https://unsplash.com/photos/a-cat-relaxes-inside-a-shop-with-film-TylCyNEUW1o" target="_blank">A cat relaxes inside a shop with film.</a>
+        </div>
+    </div>
+    <button id="show-button">Show more</button>
+    <script src="script.js"></script>
 </body>
 </html>
